--- a/style.css
+++ b/style.css
@@ -1,19 +1,21 @@
 body {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    font-family: 'Arial', sans-serif;
-    background-color: black;
-    color: yellow;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  font-family: Arial, sans-serif;
+  background-color: black;
+  color: white;
+  margin: 0;
+  padding: 20px;
 }
 
 h1 {
-    margin-top: 20px;
+  color: yellow;
 }
 
 canvas {
-    background-color: #000;
-    margin-top: 20px;
-    border: 3px solid yellow;
+  border: 3px solid white;
+  margin-top: 20px;
+  background-color: black;
 }
-
